SERVER-15287 Can't use index key pattern plugin fields to provide sort