src/mongo/db/query/planner_analysis.h
@@ -39,6 +39,19 @@ namespace mongo {
     class QueryPlannerAnalysis {
     public:
         /**
+         * Takes an index key pattern and returns an object describing the "maximal sort" that this
+         * index can provide.  Returned object is in normalized sort form (all elements have value 1
+         * or -1).
+         *
+         * Examples:
+         * - {a: 1, b: -1} => {a: 1, b: -1}
+         * - {a: true} => {a: 1}
+         * - {a: "hashed"} => {}
+         * - {a: 1, b: "text", c: 1} => {a: 1}
+         */
+        static BSONObj getSortPattern(const BSONObj& indexKeyPattern);
+
+        /**
          * In brief: performs sort and covering analysis.
          *
          * The solution rooted at 'solnRoot' provides data for the query, whether through some
